@@ -16,16 +16,6 @@ import io.vertx.core.http.HttpMethod;
 import io.vertx.core.json.Json;
 import io.vertx.core.json.JsonObject;
 import io.vertx.ext.web.RoutingContext;
-import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.Optional;
-import java.util.regex.Pattern;
 import org.apache.http.HttpHeaders;
 import org.apache.http.HttpStatus;
 import org.apache.http.entity.ContentType;
@@ -49,6 +39,11 @@ import org.hyperagents.yggdrasil.utils.HttpInterfaceConfig;
 import org.hyperagents.yggdrasil.utils.RdfModelUtils;
 import org.hyperagents.yggdrasil.utils.WebSubConfig;
 
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
+import java.util.regex.Pattern;
+
 /**
  * This class implements handlers for all HTTP requests. Requests related to CArtAgO operations
  * (e.g., creating a workspace, executing an action) are redirected to the
@@ -66,10 +61,10 @@ public class HttpEntityHandler {
   private final WebSubConfig notificationConfig;
 
   public HttpEntityHandler(
-      final Vertx vertx,
-      final HttpInterfaceConfig httpConfig,
-      final EnvironmentConfig environmentConfig,
-      final WebSubConfig notificationConfig
+    final Vertx vertx,
+    final HttpInterfaceConfig httpConfig,
+    final EnvironmentConfig environmentConfig,
+    final WebSubConfig notificationConfig
   ) {
     this.httpConfig = httpConfig;
     this.notificationConfig = notificationConfig;
@@ -79,17 +74,17 @@ public class HttpEntityHandler {
     );
     this.rdfStoreMessagebox = new RdfStoreMessagebox(vertx.eventBus());
     this.notificationMessagebox =
-        new HttpNotificationDispatcherMessagebox(vertx.eventBus(), this.notificationConfig);
+      new HttpNotificationDispatcherMessagebox(vertx.eventBus(), this.notificationConfig);
   }
 
   public void handleRedirectWithoutSlash(final RoutingContext routingContext) {
     final var requestUri = routingContext.request().absoluteURI();
 
     routingContext
-        .response()
-        .setStatusCode(HttpStatus.SC_MOVED_PERMANENTLY)
-        .headers()
-        .add(HttpHeaders.LOCATION, requestUri.substring(0, requestUri.length() - 1));
+      .response()
+      .setStatusCode(HttpStatus.SC_MOVED_PERMANENTLY)
+      .headers()
+      .add(HttpHeaders.LOCATION, requestUri.substring(0, requestUri.length() - 1));
     routingContext.response().end();
   }
 
@@ -101,10 +96,10 @@ public class HttpEntityHandler {
     parsedAcceptHeader.forEach(mimeHeader -> deliveryOptions.addHeader(HttpHeaders.ACCEPT, mimeHeader.value()));
 
     this.rdfStoreMessagebox
-        .sendMessage(new RdfStoreMessage.GetEntity(entityIri), deliveryOptions)
-        .onComplete(
-          this.handleStoreReply(routingContext, HttpStatus.SC_OK, this.getHeaders(entityIri))
-        );
+      .sendMessage(new RdfStoreMessage.GetEntity(entityIri), deliveryOptions)
+      .onComplete(
+        this.handleStoreReply(routingContext, HttpStatus.SC_OK, this.getHeaders(entityIri))
+      );
   }
 
   public void handleCreateWorkspace(final RoutingContext context) {
@@ -117,19 +112,19 @@ public class HttpEntityHandler {
     }
 
     this.cartagoMessagebox
-        .sendMessage(new CartagoMessage.CreateWorkspace(workspaceName))
-        .compose(response ->
-          this.rdfStoreMessagebox
-              .sendMessage(new RdfStoreMessage.CreateWorkspace(
-                this.httpConfig.getBaseUri() + context.request().path(),
-                workspaceName,
-                Optional.empty(),
-                response.body()
-              ))
-              .onSuccess(r -> context.response().setStatusCode(HttpStatus.SC_CREATED).end(r.body()))
-              .onFailure(t -> context.response().setStatusCode(HttpStatus.SC_CREATED).end())
-        )
-        .onFailure(context::fail);
+      .sendMessage(new CartagoMessage.CreateWorkspace(workspaceName))
+      .compose(response ->
+        this.rdfStoreMessagebox
+          .sendMessage(new RdfStoreMessage.CreateWorkspace(
+            this.httpConfig.getBaseUri() + context.request().path(),
+            workspaceName,
+            Optional.empty(),
+            response.body()
+          ))
+          .onSuccess(r -> context.response().setStatusCode(HttpStatus.SC_CREATED).end(r.body()))
+          .onFailure(t -> context.response().setStatusCode(HttpStatus.SC_CREATED).end())
+      )
+      .onFailure(context::fail);
   }
 
   public void handleCreateArtifact(final RoutingContext context) {
@@ -142,26 +137,26 @@ public class HttpEntityHandler {
     }
 
     final var artifactName =
-        ((JsonObject) Json.decodeValue(representation)).getString("artifactName");
+      ((JsonObject) Json.decodeValue(representation)).getString("artifactName");
 
     this.cartagoMessagebox
-        .sendMessage(new CartagoMessage.CreateArtifact(
-            agentId,
-            context.pathParam(WORKSPACE_ID_PARAM),
+      .sendMessage(new CartagoMessage.CreateArtifact(
+        agentId,
+        context.pathParam(WORKSPACE_ID_PARAM),
+        artifactName,
+        representation
+      ))
+      .compose(response ->
+        this.rdfStoreMessagebox
+          .sendMessage(new RdfStoreMessage.CreateArtifact(
+            this.httpConfig.getBaseUri() + context.request().path(),
             artifactName,
-            representation
-        ))
-        .compose(response ->
-          this.rdfStoreMessagebox
-              .sendMessage(new RdfStoreMessage.CreateArtifact(
-                this.httpConfig.getBaseUri() + context.request().path(),
-                artifactName,
-                response.body()
-              ))
-              .onSuccess(r -> context.response().setStatusCode(HttpStatus.SC_CREATED).end(r.body()))
-              .onFailure(t -> context.response().setStatusCode(HttpStatus.SC_CREATED).end())
-        )
-        .onFailure(context::fail);
+            response.body()
+          ))
+          .onSuccess(r -> context.response().setStatusCode(HttpStatus.SC_CREATED).end(r.body()))
+          .onFailure(t -> context.response().setStatusCode(HttpStatus.SC_CREATED).end())
+      )
+      .onFailure(context::fail);
   }
 
   // TODO: add payload validation
@@ -185,17 +180,17 @@ public class HttpEntityHandler {
     final var workspaceName = context.pathParam(WORKSPACE_ID_PARAM);
     final var artifactName = representation.getString("artifactName");
     this.notificationMessagebox
-        .sendMessage(new HttpNotificationDispatcherMessage.AddCallback(
-          this.httpConfig.getArtifactUri(workspaceName, artifactName),
-          representation.getString("callbackIri")
-        ))
-        .compose(v -> this.cartagoMessagebox.sendMessage(new CartagoMessage.Focus(
-          agentId,
-          workspaceName,
-          artifactName
-        )))
-        .onSuccess(r -> context.response().setStatusCode(HttpStatus.SC_OK).end(r.body()))
-        .onFailure(t -> context.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
+      .sendMessage(new HttpNotificationDispatcherMessage.AddCallback(
+        this.httpConfig.getArtifactUri(workspaceName, artifactName),
+        representation.getString("callbackIri")
+      ))
+      .compose(v -> this.cartagoMessagebox.sendMessage(new CartagoMessage.Focus(
+        agentId,
+        workspaceName,
+        artifactName
+      )))
+      .onSuccess(r -> context.response().setStatusCode(HttpStatus.SC_OK).end(r.body()))
+      .onFailure(t -> context.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
   }
 
   public void handleAction(final RoutingContext context) {
@@ -212,48 +207,50 @@ public class HttpEntityHandler {
     final var registry = HypermediaArtifactRegistry.getInstance();
     final var artifactIri = this.httpConfig.getArtifactUri(workspaceName, artifactName);
     final var actionName =
-        registry.getActionName(request.method().name(), request.absoluteURI());
+      registry.getActionName(request.method().name(), request.absoluteURI());
 
     this.rdfStoreMessagebox
-        .sendMessage(new RdfStoreMessage.GetEntity(artifactIri))
-        .onSuccess(storeResponse -> {
-          Optional.ofNullable(context.request().getHeader("X-API-Key"))
-                  .filter(a -> !a.isEmpty())
-                  .ifPresent(a -> registry.setApiKeyForArtifact(artifactIri, a));
+      .sendMessage(new RdfStoreMessage.GetEntity(artifactIri))
+      .onSuccess(storeResponse -> {
+        Optional.ofNullable(context.request().getHeader("X-API-Key"))
+          .filter(a -> !a.isEmpty())
+          .ifPresent(a -> registry.setApiKeyForArtifact(artifactIri, a));
 
-          this.cartagoMessagebox
-              .sendMessage(new CartagoMessage.DoAction(
-                agentId,
-                workspaceName,
-                artifactName,
-                actionName,
-                TDGraphReader
-                  .readFromString(TDFormat.RDF_TURTLE, storeResponse.body())
-                  .getActions()
-                  .stream()
-                  .filter(
-                    action -> action.getTitle().isPresent()
-                              && action.getTitle().get().equals(actionName)
-                  )
-                  .findFirst()
-                  .flatMap(ActionAffordance::getInputSchema)
-                  .filter(inputSchema -> inputSchema.getDatatype().equals(DataSchema.ARRAY))
-                  .map(inputSchema -> CartagoDataBundle.toJson(
-                    ((ArraySchema) inputSchema)
-                      .parseJson(JsonParser.parseString(context.body().asString()))
+        this.cartagoMessagebox
+          .sendMessage(new CartagoMessage.DoAction(
+            agentId,
+            workspaceName,
+            artifactName,
+            actionName,
+            TDGraphReader
+              .readFromString(TDFormat.RDF_TURTLE, storeResponse.body())
+              .getActions()
+              .stream()
+              .filter(
+                action -> action.getTitle().isPresent()
+                  && action.getTitle().get().equals(actionName)
+              )
+              .findFirst()
+              .flatMap(ActionAffordance::getInputSchema)
+              .filter(inputSchema -> inputSchema.getDatatype().equals(DataSchema.ARRAY))
+              .map(inputSchema -> CartagoDataBundle.toJson(
+                ((ArraySchema) inputSchema)
+                  .parseJson(JsonParser.parseString(
+                    context.body().asString().isEmpty() ? "" : context.body().asString()
                   ))
-              )) //todo fix this shit
-              .onSuccess(cartagoResponse -> {
-                final var httpResponse = context.response().setStatusCode(HttpStatus.SC_OK);
-                if (registry.hasFeedbackParam(artifactName, actionName)) {
-                  httpResponse.end(cartagoResponse.body());
-                } else {
-                  httpResponse.end();
-                }
-              })
-              .onFailure(t -> context.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
-        })
-        .onFailure(t -> context.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
+              ))
+          )) //todo fix this shit
+          .onSuccess(cartagoResponse -> {
+            final var httpResponse = context.response().setStatusCode(HttpStatus.SC_OK);
+            if (registry.hasFeedbackParam(artifactName, actionName)) {
+              httpResponse.end(cartagoResponse.body());
+            } else {
+              httpResponse.end();
+            }
+          })
+          .onFailure(t -> context.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
+      })
+      .onFailure(t -> context.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
   }
 
   // TODO: add payload validation
@@ -263,11 +260,11 @@ public class HttpEntityHandler {
       return;
     }
     this.rdfStoreMessagebox
-        .sendMessage(new RdfStoreMessage.UpdateEntity(
-            routingContext.request().absoluteURI(),
-            routingContext.body().asString()
-        ))
-        .onComplete(this.handleStoreReply(routingContext, HttpStatus.SC_OK));
+      .sendMessage(new RdfStoreMessage.UpdateEntity(
+        routingContext.request().absoluteURI(),
+        routingContext.body().asString()
+      ))
+      .onComplete(this.handleStoreReply(routingContext, HttpStatus.SC_OK));
   }
 
   public void handleDeleteEntity(final RoutingContext routingContext) {
@@ -276,8 +273,8 @@ public class HttpEntityHandler {
       return;
     }
     this.rdfStoreMessagebox
-        .sendMessage(new RdfStoreMessage.DeleteEntity(routingContext.request().absoluteURI()))
-        .onComplete(this.handleStoreReply(routingContext, HttpStatus.SC_OK));
+      .sendMessage(new RdfStoreMessage.DeleteEntity(routingContext.request().absoluteURI()))
+      .onComplete(this.handleStoreReply(routingContext, HttpStatus.SC_OK));
   }
 
   public void handleEntitySubscription(final RoutingContext routingContext) {
@@ -290,39 +287,39 @@ public class HttpEntityHandler {
       case "subscribe":
         if (entityIri.matches("^https?://.*?:[0-9]+/workspaces/$")) {
           this.notificationMessagebox
-              .sendMessage(
-                new HttpNotificationDispatcherMessage.AddCallback(entityIri, callbackIri)
-              )
-              .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end())
-              .onFailure(t -> routingContext.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
+            .sendMessage(
+              new HttpNotificationDispatcherMessage.AddCallback(entityIri, callbackIri)
+            )
+            .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end())
+            .onFailure(t -> routingContext.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
         } else {
           final var actualEntityIri =
-              Pattern.compile("^(https?://.*?:[0-9]+/workspaces/.*?)/(?:artifacts|agents)/$")
-                     .matcher(entityIri)
-                     .results()
-                     .map(r -> r.group(1))
-                     .findFirst()
-                     .orElse(entityIri);
+            Pattern.compile("^(https?://.*?:[0-9]+/workspaces/.*?)/(?:artifacts|agents)/$")
+              .matcher(entityIri)
+              .results()
+              .map(r -> r.group(1))
+              .findFirst()
+              .orElse(entityIri);
           this.rdfStoreMessagebox
-              .sendMessage(new RdfStoreMessage.GetEntity(actualEntityIri))
-              .compose(r -> this.notificationMessagebox.sendMessage(
-                new HttpNotificationDispatcherMessage.AddCallback(entityIri, callbackIri)
-              ))
-              .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end())
-              .onFailure(t -> routingContext.fail(
-                t instanceof ReplyException e && e.failureCode() == HttpStatus.SC_NOT_FOUND
+            .sendMessage(new RdfStoreMessage.GetEntity(actualEntityIri))
+            .compose(r -> this.notificationMessagebox.sendMessage(
+              new HttpNotificationDispatcherMessage.AddCallback(entityIri, callbackIri)
+            ))
+            .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end())
+            .onFailure(t -> routingContext.fail(
+              t instanceof ReplyException e && e.failureCode() == HttpStatus.SC_NOT_FOUND
                 ? HttpStatus.SC_NOT_FOUND
                 : HttpStatus.SC_INTERNAL_SERVER_ERROR
-              ));
+            ));
         }
         break;
       case "unsubscribe":
         this.notificationMessagebox
-            .sendMessage(
-              new HttpNotificationDispatcherMessage.RemoveCallback(entityIri, callbackIri)
-            )
-            .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end())
-            .onFailure(t -> routingContext.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
+          .sendMessage(
+            new HttpNotificationDispatcherMessage.RemoveCallback(entityIri, callbackIri)
+          )
+          .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end())
+          .onFailure(t -> routingContext.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
         break;
       default:
         routingContext.response().setStatusCode(HttpStatus.SC_BAD_REQUEST).end();
@@ -340,20 +337,20 @@ public class HttpEntityHandler {
 
     final var workspaceName = routingContext.pathParam(WORKSPACE_ID_PARAM);
     this.cartagoMessagebox
-        .sendMessage(new CartagoMessage.JoinWorkspace(
-          agentId,
-          workspaceName
-        ))
-        .compose(response ->
-          this.rdfStoreMessagebox
-              .sendMessage(new RdfStoreMessage.CreateBody(
-                workspaceName,
-                this.getAgentNameFromId(agentId),
-                response.body()
-              ))
-        )
-        .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end(r.body()))
-        .onFailure(t -> routingContext.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
+      .sendMessage(new CartagoMessage.JoinWorkspace(
+        agentId,
+        workspaceName
+      ))
+      .compose(response ->
+        this.rdfStoreMessagebox
+          .sendMessage(new RdfStoreMessage.CreateBody(
+            workspaceName,
+            this.getAgentNameFromId(agentId),
+            response.body()
+          ))
+      )
+      .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end(r.body()))
+      .onFailure(t -> routingContext.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
   }
 
   public void handleLeaveWorkspace(final RoutingContext routingContext) {
@@ -366,19 +363,19 @@ public class HttpEntityHandler {
 
     final var workspaceName = routingContext.pathParam(WORKSPACE_ID_PARAM);
     this.cartagoMessagebox
-        .sendMessage(new CartagoMessage.LeaveWorkspace(
-          agentId,
-          workspaceName
-        ))
-        .compose(r -> this.rdfStoreMessagebox
-                          .sendMessage(new RdfStoreMessage.DeleteEntity(
-                            this.httpConfig.getAgentBodyUri(
-                              workspaceName,
-                              this.getAgentNameFromId(agentId)
-                            )
-                          )))
-        .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end(r.body()))
-        .onFailure(t -> routingContext.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
+      .sendMessage(new CartagoMessage.LeaveWorkspace(
+        agentId,
+        workspaceName
+      ))
+      .compose(r -> this.rdfStoreMessagebox
+        .sendMessage(new RdfStoreMessage.DeleteEntity(
+          this.httpConfig.getAgentBodyUri(
+            workspaceName,
+            this.getAgentNameFromId(agentId)
+          )
+        )))
+      .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end(r.body()))
+      .onFailure(t -> routingContext.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
   }
 
   public void handleCreateSubWorkspace(final RoutingContext context) {
@@ -391,22 +388,22 @@ public class HttpEntityHandler {
 
     final var subWorkspaceName = context.request().getHeader("Slug");
     this.cartagoMessagebox
-        .sendMessage(new CartagoMessage.CreateSubWorkspace(
-          context.pathParam(WORKSPACE_ID_PARAM),
-          subWorkspaceName
-        ))
-        .compose(response ->
-          this.rdfStoreMessagebox
-              .sendMessage(new RdfStoreMessage.CreateWorkspace(
-                this.httpConfig.getWorkspacesUri() + "/",
-                subWorkspaceName,
-                Optional.of(this.httpConfig.getWorkspaceUri(context.pathParam(WORKSPACE_ID_PARAM))),
-                response.body()
-              ))
-              .onSuccess(r -> context.response().setStatusCode(HttpStatus.SC_CREATED).end(r.body()))
-              .onFailure(t -> context.response().setStatusCode(HttpStatus.SC_CREATED).end())
-        )
-        .onFailure(context::fail);
+      .sendMessage(new CartagoMessage.CreateSubWorkspace(
+        context.pathParam(WORKSPACE_ID_PARAM),
+        subWorkspaceName
+      ))
+      .compose(response ->
+        this.rdfStoreMessagebox
+          .sendMessage(new RdfStoreMessage.CreateWorkspace(
+            this.httpConfig.getWorkspacesUri() + "/",
+            subWorkspaceName,
+            Optional.of(this.httpConfig.getWorkspaceUri(context.pathParam(WORKSPACE_ID_PARAM))),
+            response.body()
+          ))
+          .onSuccess(r -> context.response().setStatusCode(HttpStatus.SC_CREATED).end(r.body()))
+          .onFailure(t -> context.response().setStatusCode(HttpStatus.SC_CREATED).end())
+      )
+      .onFailure(context::fail);
   }
 
   public void handleQuery(final RoutingContext routingContext) {
@@ -419,14 +416,14 @@ public class HttpEntityHandler {
         return;
       }
       this.handleQueryMessage(
-          routingContext,
-          URLDecoder.decode(queries.getFirst(), StandardCharsets.UTF_8),
-          queryParams.getAll("default-graph-uri"),
-          queryParams.getAll("named-graph-uri"),
-          request.getHeader(HttpHeaders.ACCEPT)
+        routingContext,
+        URLDecoder.decode(queries.getFirst(), StandardCharsets.UTF_8),
+        queryParams.getAll("default-graph-uri"),
+        queryParams.getAll("named-graph-uri"),
+        request.getHeader(HttpHeaders.ACCEPT)
       );
     } else if (request.getHeader(HttpHeaders.CONTENT_TYPE)
-                      .equals(ContentType.APPLICATION_FORM_URLENCODED.getMimeType())) {
+      .equals(ContentType.APPLICATION_FORM_URLENCODED.getMimeType())) {
       final var formParams = request.formAttributes();
       final var queries = formParams.getAll("query");
       if (queries.size() != 1) {
@@ -434,63 +431,63 @@ public class HttpEntityHandler {
         return;
       }
       this.handleQueryMessage(
-          routingContext,
-          URLDecoder.decode(queries.getFirst(), StandardCharsets.UTF_8),
-          formParams.getAll("default-graph-uri"),
-          formParams.getAll("named-graph-uri"),
-          request.getHeader(HttpHeaders.ACCEPT)
+        routingContext,
+        URLDecoder.decode(queries.getFirst(), StandardCharsets.UTF_8),
+        formParams.getAll("default-graph-uri"),
+        formParams.getAll("named-graph-uri"),
+        request.getHeader(HttpHeaders.ACCEPT)
       );
     } else {
       final var queryParams = request.params();
       this.handleQueryMessage(
-          routingContext,
-          routingContext.body().asString(),
-          queryParams.getAll("default-graph-uri"),
-          queryParams.getAll("named-graph-uri"),
-          request.getHeader(HttpHeaders.ACCEPT)
+        routingContext,
+        routingContext.body().asString(),
+        queryParams.getAll("default-graph-uri"),
+        queryParams.getAll("named-graph-uri"),
+        request.getHeader(HttpHeaders.ACCEPT)
       );
     }
   }
 
   private void handleQueryMessage(
-      final RoutingContext routingContext,
-      final String query,
-      final List<String> defaultGraphUris,
-      final List<String> namedGraphUris,
-      final String resultContentType
+    final RoutingContext routingContext,
+    final String query,
+    final List<String> defaultGraphUris,
+    final List<String> namedGraphUris,
+    final String resultContentType
   ) {
     this.rdfStoreMessagebox
-        .sendMessage(new RdfStoreMessage.QueryKnowledgeGraph(
-            query,
-            defaultGraphUris.stream()
-                            .map(s -> URLDecoder.decode(s, StandardCharsets.UTF_8))
-                            .toList(),
-            namedGraphUris.stream()
-                          .map(s -> URLDecoder.decode(s, StandardCharsets.UTF_8))
-                          .toList(),
-            Optional.ofNullable(resultContentType).orElse("application/sparql-results+json")
-        ))
-        .onSuccess(r ->
-          routingContext.response()
-                        .putHeader(HttpHeaders.CONTENT_TYPE, resultContentType)
-                        .end(r.body())
-        )
-        .onFailure(t -> {
-          if (t instanceof ReplyException e) {
-            routingContext.fail(e.failureCode());
-          } else {
-            routingContext.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR);
-          }
-        });
+      .sendMessage(new RdfStoreMessage.QueryKnowledgeGraph(
+        query,
+        defaultGraphUris.stream()
+          .map(s -> URLDecoder.decode(s, StandardCharsets.UTF_8))
+          .toList(),
+        namedGraphUris.stream()
+          .map(s -> URLDecoder.decode(s, StandardCharsets.UTF_8))
+          .toList(),
+        Optional.ofNullable(resultContentType).orElse("application/sparql-results+json")
+      ))
+      .onSuccess(r ->
+        routingContext.response()
+          .putHeader(HttpHeaders.CONTENT_TYPE, resultContentType)
+          .end(r.body())
+      )
+      .onFailure(t -> {
+        if (t instanceof ReplyException e) {
+          routingContext.fail(e.failureCode());
+        } else {
+          routingContext.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR);
+        }
+      });
   }
 
   private String getAgentNameFromId(final String agentId) {
     return Pattern.compile("^https?://.*?:[0-9]+/agents/(.*?)$")
-                  .matcher(agentId)
-                  .results()
-                  .findFirst()
-                  .orElseThrow()
-                  .group(1);
+      .matcher(agentId)
+      .results()
+      .findFirst()
+      .orElseThrow()
+      .group(1);
   }
 
   private Map<String, List<String>> getHeaders(final String entityIri) {
@@ -501,14 +498,14 @@ public class HttpEntityHandler {
 
   private Map<String, List<String>> getWebSubHeaders(final String entityIri) {
     return this.notificationConfig.isEnabled()
-           ? Map.of(
-               "Link",
-               Arrays.asList(
-                 "<" + this.notificationConfig.getWebSubHubUri() + ">; rel=\"hub\"",
-                 "<" + entityIri + ">; rel=\"self\""
-               )
-             )
-           : Collections.emptyMap();
+      ? Map.of(
+      "Link",
+      Arrays.asList(
+        "<" + this.notificationConfig.getWebSubHubUri() + ">; rel=\"hub\"",
+        "<" + entityIri + ">; rel=\"self\""
+      )
+    )
+      : Collections.emptyMap();
   }
 
   private Map<String, List<String>> getCorsHeaders() {
@@ -536,50 +533,50 @@ public class HttpEntityHandler {
     final var entityIri = RdfModelUtils.createIri(requestUri + hint);
     try {
       final var entityGraph = RdfModelUtils.stringToModel(
-          entityRepresentation,
-          entityIri,
-          RDFFormat.TURTLE
+        entityRepresentation,
+        entityIri,
+        RDFFormat.TURTLE
       );
       if (
-          entityGraph.contains(
-            entityIri,
-            RdfModelUtils.createIri(RDF.TYPE.stringValue()),
-            RdfModelUtils.createIri("https://purl.org/hmas/Artifact")
-          )
+        entityGraph.contains(
+          entityIri,
+          RdfModelUtils.createIri(RDF.TYPE.stringValue()),
+          RdfModelUtils.createIri("https://purl.org/hmas/Artifact")
+        )
       ) {
         this.rdfStoreMessagebox
-            .sendMessage(new RdfStoreMessage.CreateArtifact(
-              requestUri,
-              hint,
-              entityRepresentation
-            ))
-            .onComplete(this.handleStoreReply(context, HttpStatus.SC_CREATED));
+          .sendMessage(new RdfStoreMessage.CreateArtifact(
+            requestUri,
+            hint,
+            entityRepresentation
+          ))
+          .onComplete(this.handleStoreReply(context, HttpStatus.SC_CREATED));
       } else if (
-          entityGraph.contains(
-            entityIri,
-            RdfModelUtils.createIri(RDF.TYPE.stringValue()),
-            RdfModelUtils.createIri("https://purl.org/hmas/Workspace")
-          )
+        entityGraph.contains(
+          entityIri,
+          RdfModelUtils.createIri(RDF.TYPE.stringValue()),
+          RdfModelUtils.createIri("https://purl.org/hmas/Workspace")
+        )
       ) {
         this.rdfStoreMessagebox
-            .sendMessage(new RdfStoreMessage.CreateWorkspace(
-                requestUri,
-                hint,
-                entityGraph.stream()
-                           .filter(t ->
-                             t.getSubject().equals(entityIri)
-                             && t.getPredicate().equals(RdfModelUtils.createIri(
-                               "https://purl.org/hmas/isContainedIn"
-                             ))
-                           )
-                           .map(Statement::getObject)
-                           .map(t -> t instanceof IRI i ? Optional.of(i) : Optional.<IRI>empty())
-                           .flatMap(Optional::stream)
-                           .map(IRI::toString)
-                           .findFirst(),
-                entityRepresentation
-            ))
-            .onComplete(this.handleStoreReply(context, HttpStatus.SC_CREATED));
+          .sendMessage(new RdfStoreMessage.CreateWorkspace(
+            requestUri,
+            hint,
+            entityGraph.stream()
+              .filter(t ->
+                t.getSubject().equals(entityIri)
+                  && t.getPredicate().equals(RdfModelUtils.createIri(
+                  "https://purl.org/hmas/isContainedIn"
+                ))
+              )
+              .map(Statement::getObject)
+              .map(t -> t instanceof IRI i ? Optional.of(i) : Optional.<IRI>empty())
+              .flatMap(Optional::stream)
+              .map(IRI::toString)
+              .findFirst(),
+            entityRepresentation
+          ))
+          .onComplete(this.handleStoreReply(context, HttpStatus.SC_CREATED));
       } else {
         context.fail(HttpStatus.SC_BAD_REQUEST);
       }
@@ -590,16 +587,16 @@ public class HttpEntityHandler {
   }
 
   private Handler<AsyncResult<Message<String>>> handleStoreReply(
-      final RoutingContext routingContext,
-      final int succeededStatusCode
+    final RoutingContext routingContext,
+    final int succeededStatusCode
   ) {
     return this.handleStoreReply(routingContext, succeededStatusCode, new HashMap<>());
   }
 
   private Handler<AsyncResult<Message<String>>> handleStoreReply(
-      final RoutingContext routingContext,
-      final int succeededStatusCode,
-      final Map<String, List<String>> headers
+    final RoutingContext routingContext,
+    final int succeededStatusCode,
+    final Map<String, List<String>> headers
   ) {
     return reply -> {
       if (reply.succeeded()) {
@@ -616,8 +613,8 @@ public class HttpEntityHandler {
         });
 
         Optional.ofNullable(reply.result().body())
-                .filter(r -> !r.isEmpty())
-                .ifPresentOrElse(httpResponse::end, httpResponse::end);
+          .filter(r -> !r.isEmpty())
+          .ifPresentOrElse(httpResponse::end, httpResponse::end);
       } else {
         final var exception = ((ReplyException) reply.cause());
 
